fix tests and add travis.yml

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,11 +2,17 @@ Metrics/LineLength:
   Max: 120
 Metrics/MethodLength:
   Max: 25
+Metrics/BlockLength:
+  Exclude:
+    - 'spec/**/*'
 Metrics/AbcSize:
   Max: 25
 Style/Documentation:
   Enabled: false
 Style/ClassAndModuleChildren:
   Enabled: false
-Style/FileName:
+Naming/FileName:
   Enabled: false
+Lint/DuplicateMethods:
+  Exclude:
+    - 'lib/yard/cli/stats.rb'
